--- a/spring-cloud-01/discovery/pom.xml
+++ b/spring-cloud-01/discovery/pom.xml
@@ -9,10 +9,10 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.sy</groupId>
-  <artifactId>spring-cloud</artifactId>
+  <artifactId>discovery-service</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>spring-cloud</name>
-  <description>spring-cloud</description>
+  <name>discovery-service</name>
+  <description>discovery-service</description>
   <url/>
   <licenses>
     <license/>
@@ -28,11 +28,18 @@
   </scm>
   <properties>
     <java.version>17</java.version>
+    <spring-cloud.version>2023.0.2</spring-cloud.version>
   </properties>
   <dependencies>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter</artifactId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
 
     <dependency>
@@ -46,6 +53,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <plugins>
