spring cloud config Client 정리

--- a/config/config-client/src/main/resources/application.yml
+++ b/config/config-client/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: sy
   profiles:
-    active: dev
+    active: kr-dev
   config:
     import: optional:configserver:http://localhost:8888
 
