spring cloud config server basedir 설정 (os 에러 방지)

--- a/config/config-server/src/main/resources/application.yml
+++ b/config/config-server/src/main/resources/application.yml
@@ -10,3 +10,4 @@ spring:
           uri: https://github.com/yoonsla/spring-cloud
           search-paths: config/config-file/**
           default-label: main
+          basedir: ./repo
