--- a/open-feign/feign-provider/pom.xml
+++ b/open-feign/feign-provider/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.example</groupId>
   <artifactId>feign</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>feign</name>
+  <name>feign-provider</name>
   <description>feign</description>
   <url/>
   <licenses>
@@ -42,8 +42,17 @@
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
     </dependency>
   </dependencies>
   <dependencyManagement>
